# bincode-fork

./: Cargo.toml  README.md
.github/workflows/: benchmark.yml  cifuzz.yml  cross_platform.yml  docs.yml  miri.yml  rust.yml
benches/: inline.rs  string.rs  varint.rs
compatibility/: Cargo.toml
compatibility/src/: lib.rs  membership.rs  rand.rs  sway.rs
derive/: Cargo.toml
derive/src/: attribute.rs
dev/bench/: data.js
docs/bincode/: all.html  derive.BorrowDecode.html  derive.Decode.html  derive.Encode.html  fn.borrow_decode_from_slice.html  fn.borrow_decode_from_slice_with_context.html  fn.decode_from_reader.html  fn.decode_from_slice.html  fn.decode_from_slice_with_context.html  fn.decode_from_std_read.html  fn.decode_from_std_read_with_context.html  fn.encode_into_slice.html  fn.encode_into_std_write.html  fn.encode_into_writer.html  fn.encode_to_vec.html  index.html  macro.impl_borrow_decode.html  macro.impl_borrow_decode_with_context.html
docs/bincode/config/: enum.Endianness.html  enum.IntEncoding.html  fn.legacy.html  fn.standard.html  index.html  struct.BigEndian.html  struct.Configuration.html  struct.Fixint.html  struct.Limit.html  struct.LittleEndian.html  struct.NoLimit.html  (+2 more)
src/: lib.rs
src/de/: decoder.rs  impls.rs  mod.rs
src/enc/: encoder.rs  impls.rs
src/features/: impl_alloc.rs  impl_std.rs
src/varint/: decode_unsigned.rs  encode_signed.rs  encode_unsigned.rs  mod.rs
tests/: alloc.rs  context.rs  derive.rs  serde.rs
tests/issues/: issue_427.rs  issue_474.rs  issue_523.rs  issue_537.rs  issue_570.rs  issue_592.rs  issue_614.rs
(+45 files in other folders)
