[package]
name = "bincode_derive"
version = "2.0.2" # remember to update bincode
authors = [
    "Zoey Riordan <zoey@dos.cafe>",
    "Victor Koenders <bincode@trangar.com>",
]
edition = "2024"
rust-version = "1.86.0"

repository = "https://github.com/bincode-org/bincode"
documentation = "https://docs.rs/bincode_derive"
readme = "./readme.md"
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
license = "MIT"
description = "Implementation of #[derive(Encode, Decode)] for bincode"

[lib]
proc-macro = true

[dependencies]
virtue = { git = "https://github.com/Dan0xE/virtue-fork.git", tag = "v0.0.20" }
